fix text auto align

--- a/src/components/cell-content/cell-content.scss
+++ b/src/components/cell-content/cell-content.scss
@@ -10,7 +10,6 @@ cell-content {
 
     > p {
         position: relative;
-        display: flex;
         align-items: baseline;
         margin: initial;
         padding: initial;
